# tinylang

./: CMakeLists.txt  README.md
cmake/modules/: AddTinylang.cmake
include/tinylang/Basic/: Version.h  Version.inc.in
lib/Basic/: CMakeLists.txt  Version.cpp
tools/driver/: CMakeLists.txt  Driver.cpp
